# Vhisper

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
docs/: SWIFT_INTEGRATION.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/asr/: dashscope.rs  funasr.rs  qwen.rs
src-tauri/src/commands/: config.rs
src-tauri/src/config/: settings.rs
src-tauri/src/hotkey/: macos.rs  mod.rs  windows.rs
src-tauri/src/llm/: ollama.rs
src-tauri/src/pipeline/: voice.rs
src-tauri/src/tray/: mod.rs
src/components/: Settings.vue
swift/: build.sh
swift/vhisper/: AudioLevelMonitor.swift  VhisperBridge.swift  WaveformOverlay.swift  vhisperApp.swift
swift/vhisper.xcodeproj/: project.pbxproj
