[package]
name = "vhisper"
version = "1.0.3"
description = "Voice Input Method"
authors = ["Vhisper"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "vhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# 音频
cpal = "0.16"
hound = "3.5"

# 图像处理
png = "0.17"

# 输入输出
enigo = { version = "0.2", features = ["serde"] }
arboard = "3.6"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "multipart"] }

# WebSocket 客户端 (阿里云实时语音识别)
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
http = "1"

# 本地配置存储
dirs = "5"
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "libc"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
